--- a/css/styles.css
+++ b/css/styles.css
@@ -316,7 +316,7 @@ div.mobile-menu {
     position: relative;
     width: 100%;
     height: 400px;
-    background-position: left center;
+    background-position: center;
     background-size: cover;
     display: flex;
     align-items: center;
@@ -593,7 +593,7 @@ main h3 {
 
 .blog-card {
     max-width: 500px;
-    height: 650px;
+    height: auto;
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
@@ -853,7 +853,7 @@ figure {
     }
 
     main .waves {
-        height: 70px;
+        height: 50px;
     }
 
     .title-container h1, .secondary-color {
@@ -865,8 +865,23 @@ figure {
         height: 60%;
         margin-left: 10px;
     }
+    .whois {
+        position: absolute;
+        width: auto;
+        bottom: 5%;
+        p{
+            font-size: 0.7rem;
+        }
+    }
+    
+    .contact-form {
+        width: 70%;
+    }
 
-  
+    .about-me {
+        width: 90%;
+        padding: 0;
+    }
 
     
 }
