--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,20 @@
     color: black;
 }
 
-/* Color pallette */
+/* Color pallette
+color choices
+yellow: #F2E41D
+orange: F28627
+green: 648C0D
+blue: 148EFF
+
+
+*/
+
 
 :root {
     --background: #ffffff;
+    --primary: #282828;
     --secondary: #F2E41D;
 }
 
@@ -32,7 +42,7 @@ main {
     position:fixed;
     width: 100%;
     height: 70px;
-    background-color: black;
+    background-color: var(--primary);
     color: white;
     display: flex;
     flex-basis: 100%;
@@ -177,7 +187,7 @@ div.mobile-menu {
     margin-right: auto;
     width: 100%;
     height: 100dvh;
-    background-color: black;
+    background-color: var(--primary);
     font-weight: 600;
     line-height: 3rem;
     z-index: 4;
@@ -281,14 +291,14 @@ div.mobile-menu {
     width: fit-content;
     margin: 10px 0 10px 0;
     background-color: var(--secondary);
-    border-radius: 50px;
+    border-radius: 20px;
     box-shadow: 2px 6px 10px black;
     cursor: pointer;
     border: 2px solid black;
 }
 
 .CTA:hover, .CTA:focus {
-    background-color: #000000;
+    background-color: var(--primary);
     color: var(--secondary);
     box-shadow: 2px 6px 10px var(--secondary);
     border: 2px solid var(--secondary);
@@ -297,12 +307,12 @@ div.mobile-menu {
 .CTA h2 {
     font-family: "Jomhuria", serif;
     font-weight: 400;
-    font-style: normal;
     font-size: 50px;
+    transform: translateY(2px);
 }
 
 .hero .CTA {
-    padding: 10px 30px;
+    padding: 3px 20px;
     margin: 10px 0 10px 0;
 }
 
@@ -497,7 +507,7 @@ main h3 {
     width: 500px;
     height: 250px;
     margin: 10px;
-    background-color: white;
+    background-color: var(--background);
     align-items: center;
     text-align: center;
     display: flex;
@@ -601,7 +611,7 @@ main h3 {
     padding: 10px;
     margin: 10px;
     border-radius: 10px;
-    background-color: white;
+    background-color: var(--background);
     align-items: center;
     text-align: center;
     display: flex;
@@ -640,7 +650,7 @@ main h3 {
 
 .post-container, .comments-container {
     width: 90%;
-    background-color: white;
+    background-color: var(--background);
 }
 
 .comments-container {
@@ -742,7 +752,7 @@ figure {
 
 .about-me {
     width: 50%;
-    background-color: white;
+    background-color: var(--background);
     padding: 30px;
     border-radius: 10px;
 }
