--- a/css/styles.css
+++ b/css/styles.css
@@ -98,8 +98,8 @@ main {
 
 .logo {
     width: auto;
-    height: 70%;
-    margin-left: 100px;
+    height: 50px;
+    margin-right: 5px;
 }
 
 .link-container, .title-container {
@@ -107,8 +107,12 @@ main {
     justify-content: space-around;
     flex-grow: 1;
     align-items: center;
-    
 }
+
+.title-container a {
+    margin-left: 50px;
+}
+
 
 .searchbar {
     display: flex;
@@ -326,6 +330,17 @@ div.mobile-menu {
     position: relative;
     width: 100%;
     height: 400px;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.post-hero {
+    position: relative;
+    width: 100%;
+    height: 700px;
     background-position: center;
     background-size: cover;
     display: flex;
@@ -609,7 +624,7 @@ main h3 {
     max-width: 500px;
     height: auto;
     padding: 10px;
-    margin: 10px;
+    margin: 20px 10px;
     border-radius: 10px;
     background-color: var(--background);
     align-items: center;
@@ -740,7 +755,7 @@ figure {
 }
 
 .related-wrapper {
-    margin-top: 750px;
+    margin-top: 50px;
     text-align: center;
 }
 
@@ -778,8 +793,24 @@ figure {
     input, textarea {
      border-radius: 5px;
      border: 1px solid black;
+     padding: 2px 5px;
     }
 }
+
+/* Adjustments for smaller screens */
+@media (max-width: 1750px) {
+.carousel-card {
+    width: 400px;
+    height: 200px; 
+}
+}
+
+@media (max-width: 1450px) {
+    .carousel-card {
+        width: 320px;
+        height: 200px;      
+    }
+    }
 
 
 /* Mobile version adjustmens */
@@ -790,9 +821,6 @@ figure {
         width: 100%;
     }
 
-    .logo {
-        margin-left: 0px;
-    }
 
     div.mobile-menu {
         display: block;
@@ -867,7 +895,7 @@ figure {
         width: 100%;
     }
 
-    main .waves {
+    main .waves, .waves {
         height: 50px;
     }
 
@@ -877,7 +905,7 @@ figure {
 
     .logo {
         width: auto;
-        height: 60%;
+        height: 40px;
         margin-left: 10px;
     }
     .whois {
@@ -896,6 +924,15 @@ figure {
     .about-me {
         width: 90%;
         padding: 0;
+    }
+
+    .post-hero {
+        height: 400px;
+    }
+
+    main h1 {
+        font-size: 70px;
+        line-height: normal;
     }
 
     
